About and Project 1 changed

--- a/src/index.html
+++ b/src/index.html
@@ -46,9 +46,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Michael Wood</span>
           <br />
-          I'm the Unknown Developer.
+          I'm a full stack software developer
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -79,11 +79,11 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you have!
+                I am a 23 year old Business Management and Accounting & Finance gradute . I recently completed Makers software engineering Bootcamp in London and I am currently looking for a junior / entry level role
+                to continue learning and growing my skills. 
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                I have previously worked in sales in the construction industry. In my spare time I enjoy golfing, skiing and running. I am currently training for the Mancheter Marathon in April.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -112,12 +112,13 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Bald Bible</h3>
                 <div>
                   <p class="mb-4">
-                    Describe the project being very specific, you can use the Twitter standard: no more than 280 characters: 
-                    complement the information: the skills learned or reinforced in its realization and how you faced it, 
-                    prove to be proactive in the search for solutions.
+                    A pintrest style image sharing app made in a develoment team while at Makers.
+                    Built using MERN teck stack and Cloudinary for cloud based image store. 
+                    Some of the challenges we encountered while building this included displaying images in a pintrest board style, 
+                    adding the image urls into our mongoDB Compass database and like and comment components on all images. 
                   </p>
                 </div>
                 <a
@@ -126,7 +127,7 @@
                   class="cta-btn cta-btn--hero"
                   href="#!"
                 >
-                  See Live
+                  See on GitHub
                 </a>
                 <a
                   rel="noreferrer"
@@ -151,7 +152,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/BaldBibleHome.jpg"
                     />
                   </div>
                 </a>
